--- a/02.md
+++ b/02.md
@@ -54,6 +54,48 @@
 - it means reusability.
 - it shows `IS-A` relationship.
 
+```java
+
+class Product {
+    String name;
+    double price;
+
+    public Product(String name, double price) {
+        this.name = name;
+        this.price = price;
+    }
+}
+
+class ElectronicProduct extends Product {
+    String brand;
+
+    public ElectronicProduct(String name, double price, String brand) {
+        super(name, price);
+        this.brand = brand;
+    }
+}
+
+class ClothingProduct extends Product {
+    String size;
+
+    public ClothingProduct(String name, double price, String size) {
+        super(name, price);
+        this.size = size;
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        ElectronicProduct iphone = new ElectronicProduct("iPhone 13", 999.0, "Apple");
+        ClothingProduct tshirt = new ClothingProduct("Striped T-shirt", 29.99, "M");
+
+        System.out.println("Electronic product: " + iphone.name + " - " + iphone.brand + " - $" + iphone.price);
+        System.out.println("Clothing product: " + tshirt.name + " - " + tshirt.size + " - $" + tshirt.price);
+    }
+}
+
+```
+
 ## Polymorphism
 ## Abstraction
 
