--- a/01.md
+++ b/01.md
@@ -23,6 +23,7 @@ https://www.youtube.com/watch?v=TXV0_JhP8pY
 - Program to Check Whether A Number is Prime or Not in Java.
 
 # ArrayProgram
+- Find the Sum of All Even Numbers from the given array using Java8 Features.
 
 # StringProgram
 
@@ -373,4 +374,9 @@ public class PrimitiveArrayToStream {
 		//Integer[] array2 = Arrays.stream(arr).boxed().toArray(Integer[] :: new);	
 	}
 }
+```
+
+## Find the Sum of All Even Numbers from the given array using Java8 Features.
+```java
+
 ```
