--- a/10.md
+++ b/10.md
@@ -81,3 +81,8 @@ SELECT oId ,Qty From Orders GROUP BY oId Having  > 5000
 
 
 
+
+```
+## Deploy and Run Your Spring Boot Application On External Server(Apache Tomcat External Server).
+https://www.youtube.com/watch?v=8GT3yXFR0lE
+```
