--- a/01.md
+++ b/01.md
@@ -6,3 +6,9 @@
 ```
 
 ## Find the Sum of All Even Numbers from the given array using Java8 Features.
+    int [] arr = {1,2,3,4,5,6,7,8,9,10};
+    
+```java
+    int sum = Arrays.stream(arr).filter(n->n%2 == 0).sum();
+    System.out.println(sum);
+```
