--- a/01.md
+++ b/01.md
@@ -1,13 +1,79 @@
 # Array
 ```
 # ArrayProgram
+- Find Missing Number in Array
+- Program to find the minimum (or maximum) element of an array
 - Find the Sum of All Even Numbers from the given array using Java8 Features.
 
 ```
 
+## Find Missing Number in Array
+	int [] arr = {1,2,3,5};
+```java
+public class MissingNumberInArray {
+	
+	public static void main(String[] args) {
+		
+		// Array should not have duplicates
+		// Array No need be Sorted order
+		
+		int [] arr = {1,2,3,5};
+		
+		// 1+2+3+5=11
+		
+		int sum1 = 0;
+		for(int i = 0 ; i< arr.length; i++) {
+			sum1 = sum1 + arr[i];
+		}
+		System.out.println("Sum of Elements in Array ="+sum1);
+		
+		// 1+2+3+4+5 = 15
+		int sum2=0;
+		for(int i =1;i<=5;i++) {
+			sum2 = sum2 +i;
+		}
+		System.out.println("Sum Of Range Of Elements in Array ="+sum2);
+		
+		System.out.println("Missing Number is = "+(sum2-sum1));
+	}
+}
+```
+
+## Program to find the minimum (or maximum) element of an array
+    int a[]={1,423,6,46,34,23,13,53,4};
+```java
+public class MaxAndMinElementArray {
+	
+	public static void main(String[] args) {
+		
+		int a[]={1,423,6,46,34,23,13,53,4};
+		
+		int max = a[0];
+		
+		for(int i = 1;i<a.length;i++) {
+			if(a[i] > max) {
+				max = a[i];	
+			}
+		}
+		
+		System.out.println(Arrays.toString(a));
+		
+		System.out.println("Maximum Element is : " + max);
+		
+		int min = a[0];
+		
+		for(int i=1 ;i < a.length ; i++) {
+			if(a[i] < min) {
+				min = a[i];
+			}
+		}
+		System.out.println("Minimum Element is : " + min);	
+	}
+}
+```
 ## Find the Sum of All Even Numbers from the given array using Java8 Features.
     int [] arr = {1,2,3,4,5,6,7,8,9,10};
-    
+
 ```java
     int sum = Arrays.stream(arr).filter(n->n%2 == 0).sum();
     System.out.println(sum);
