--- a/01.md
+++ b/01.md
@@ -1,8 +1,11 @@
 # Array
 ```
 # ArrayProgram
+
 - Find Missing Number in Array
 - Program to find the minimum (or maximum) element of an array
+- How to rotate an array by x places in JAVA
+
 - Find the Sum of All Even Numbers from the given array using Java8 Features.
 
 ```
@@ -71,6 +74,9 @@ public class MaxAndMinElementArray {
 	}
 }
 ```
+## How to rotate an array by x places in Java
+	int [] arr = {1,2,5,-1,10};
+
 ## Find the Sum of All Even Numbers from the given array using Java8 Features.
     int [] arr = {1,2,3,4,5,6,7,8,9,10};
 
