--- a/01.md
+++ b/01.md
@@ -4,7 +4,8 @@
 
 - Find Missing Number in Array
 - Program to find the minimum (or maximum) element of an array
-- How to rotate an array by x places in JAVA
+- How to rotate an array in Java
+- How to rotate an array by x places in Java
 
 - Find the Sum of All Even Numbers from the given array using Java8 Features.
 
