--- a/01.md
+++ b/01.md
@@ -6,6 +6,9 @@
 - Program to find the minimum (or maximum) element of an array
 - How to rotate an array in Java
 - How to rotate an array by x places in Java
+- How to reverse the array elements in Java
+- Merge Sorted Array 
+- Subarray Sum Equals K
 
 - Find the Sum of All Even Numbers from the given array using Java8 Features.
 
