--- a/01.md
+++ b/01.md
@@ -8,7 +8,7 @@
 - How to rotate an array by x places in Java
 - How to reverse the array elements in Java
 - Merge Sorted Array 
-- Subarray Sum Equals K
+- Subarray Sum Equals K using hashmap
 
 - Find the Sum of All Even Numbers from the given array using Java8 Features.
 
