--- a/main/01.md
+++ b/main/01.md
@@ -374,3 +374,9 @@ public class PrimitiveArrayToStream {
 	}
 }
 ```
+```
+What is Upcasting in Java
+https://www.youtube.com/watch?v=9ry63PeSl1E
+What is Downcasting in Java
+https://www.youtube.com/watch?v=tiWY-rB86EA
+```
