--- a/02.StringProgram.md
+++ b/02.StringProgram.md
@@ -1,3 +1,15 @@
+```
+# StringProgram
+
+- Java program to check whether a string is a Palindrome.
+- Compress a string aaabbbcc into a3b3c2 in java.
+- Write Java Program -input "a2b3c1" and Output should be "aabbbc"
+- In a string, count the repeated characters and show in map using Java 8.
+- Write a program to convert camel case string to snake case string.
+- Java Program To Find First Non Repeated Character In String
+
+```
+
 ### Java program to check whether a string is a Palindrome.
 
 ```java
