--- a/main/01.md
+++ b/main/01.md
@@ -21,6 +21,7 @@ https://www.youtube.com/watch?v=TXV0_JhP8pY
 ```
 # Basic Program
 - Program to Check Whether A Number is Prime or Not in Java.
+- How to Check Given Number is Palindrome or Not
 
 
 
