--- a/main/01.md
+++ b/main/01.md
@@ -374,3 +374,34 @@ https://www.youtube.com/watch?v=9ry63PeSl1E
 What is Downcasting in Java
 https://www.youtube.com/watch?v=tiWY-rB86EA
 ```
+
+## How to Check Given Number is Palindrome or Not
+```java
+public class PalindromeNum {
+	
+	public static void main(String[] args) {
+		
+		int num = 121;
+		checkPalindrome(num);
+		
+	}
+	private static void checkPalindrome(int num) {
+		
+		int temp = num;
+		
+		int sum = 0;
+		
+		while(num > 0) {
+			int rem = num % 10;
+			sum = (sum * 10) + rem;
+			num = num /10;
+		}
+		
+		if(temp == sum) {
+			System.out.println("Palindrome");
+		}else {
+			System.out.println("Not Palindrome");
+		}	
+	}
+}
+```
