--- a/03.md
+++ b/03.md
@@ -45,5 +45,22 @@ https://www.interviewbit.com/spring-boot-interview-questions/
 ```
 
 ```
+
+```
+
+```
+- What are the key Advantages of spring boot over spring
+- can you explain concept of DI in Spring and why it is beneficial
+- What is role of @SpringBootApplication Annotation
+- How Spring boot achive Auto-Configuration with example.(dataSource Example)
+- What are the steps to Override a specific AutoConfiguration.(application.properties)
+- What annotation used to create restful services in spring boot.(@RestController )
+- How handle exception in spring boot rest aplications
+https://www.youtube.com/watch?v=0QhyHQh0avE
+```
+
+```
 Difference Between @Restcontroller and @Controller
+- @Autowired
+- @Blob
 ```
