--- a/03.md
+++ b/03.md
@@ -56,6 +56,7 @@ https://www.interviewbit.com/spring-boot-interview-questions/
 - What are the steps to Override a specific AutoConfiguration.(application.properties)
 - What annotation used to create restful services in spring boot.(@RestController )
 - How handle exception in spring boot rest aplications
+- approach to secure end points
 https://www.youtube.com/watch?v=0QhyHQh0avE
 ```
 
