--- a/03.md
+++ b/03.md
@@ -64,4 +64,8 @@ https://www.youtube.com/watch?v=0QhyHQh0avE
 Difference Between @Restcontroller and @Controller
 - @Autowired
 - @Blob
+
+- @RestControllerAdvice
+- @ExceptionHandler
+- @ResponseStatus
 ```
