--- a/03.md
+++ b/03.md
@@ -61,11 +61,18 @@ https://www.youtube.com/watch?v=0QhyHQh0avE
 ```
 
 ```
-Difference Between @Restcontroller and @Controller
+- @RequestMapping
+- Difference Between @Restcontroller and @Controller
+- @ResponseBody
+- @SpringBootApplication(@SpringBootConfiguration @EnableAutoConfiguration @ComponentScan)
 - @Autowired
 - @Blob
 
 - @RestControllerAdvice
 - @ExceptionHandler
 - @ResponseStatus
+```
+
+```
+SWAGGER
 ```
