--- a/03.md
+++ b/03.md
@@ -66,6 +66,7 @@ https://www.youtube.com/watch?v=0QhyHQh0avE
 - @ResponseBody
 - @SpringBootApplication(@SpringBootConfiguration @EnableAutoConfiguration @ComponentScan)
 - @Autowired
+- @Qualifier
 - @Blob
 
 - @RestControllerAdvice
@@ -75,4 +76,9 @@ https://www.youtube.com/watch?v=0QhyHQh0avE
 
 ```
 SWAGGER
+```
+
+```
+- When to use HTTP POST instead of GET to retrieve data?
+https://www.youtube.com/watch?v=fS8QY7BiDaQ
 ```
