--- a/03.md
+++ b/03.md
@@ -82,4 +82,8 @@ LOGGING
 ```
 - When to use HTTP POST instead of GET to retrieve data?
 https://www.youtube.com/watch?v=fS8QY7BiDaQ
+
+- Hibernate N+1 Problem Solution
+https://www.youtube.com/watch?v=Txb0YlEVLds
 ```
+
