--- a/main/01.md
+++ b/main/01.md
@@ -1,5 +1,7 @@
 
 ```
+Why we can't use this inside static context?
+https://www.youtube.com/watch?v=z5AJ4NK4HpY&list=PLVlQHNRLflP-exWR9yw_Xp29Ctek_GQTG
 How to create immutable class
 https://www.youtube.com/watch?v=TXV0_JhP8pY
 
