--- a/main/01.md
+++ b/main/01.md
@@ -1,3 +1,153 @@
+```
+class A{
+int add(int a, int b);
+double add(int a, int b);
+}
+class A{ int add(int a, int b); double ... by Akshay Bhasal
+Akshay Bhasal
+12:35
+class A{
+int add(int a, int b);
+double add(int a, int b, int c);
+}
+class Animal{ run() { sout("Running ani... by Akshay Bhasal
+Akshay Bhasal
+12:36
+class Animal{
+run() {
+sout("Running animal")
+}
+}
+class Dog extends Animal{ run() { sout(... by Akshay Bhasal
+Akshay Bhasal
+12:36
+class Dog extends Animal{
+run() {
+sout("Running Dog");
+}
+}
+Animal a = new Dog(); a.run(); by Akshay Bhasal
+Akshay Bhasal
+12:37
+Animal a = new Dog();
+a.run();
+class Animal{ int age = 10; run() { s... by Akshay Bhasal
+Akshay Bhasal
+12:37
+class Animal{
+int age = 10;
+run() {
+sout("Running animal")
+}
+}
+class Dog extends Animal{ int age = 20; ... by Akshay Bhasal
+Akshay Bhasal
+12:37
+class Dog extends Animal{
+int age = 20;
+run() {
+sout("Running Dog");
+}
+}
+Animal a = new Dog(); a.age; by Akshay Bhasal
+Akshay Bhasal
+12:38
+Animal a = new Dog();
+a.age;
+Component("fooFormatter") class FooFormat... by Akshay Bhasal
+Akshay Bhasal
+13:05
+Component("fooFormatter")
+class FooFormatter implements Formatter{
+format() {
+sout("Formatting");
+}
+Component("barFormatter") class BarFormat... by Akshay Bhasal
+Akshay Bhasal
+13:05
+Component("barFormatter")
+class BarFormatter implements Formatter{
+format() {
+sout("Formatting");
+}
+}
+@Autowire private Formatter formatter by Akshay Bhasal
+Akshay Bhasal
+13:05
+@Autowire
+private Formatter formatter
+has context menu
+
+
+has context menu
+
+
+
+
+Select * from Employee order by salary desc limit 1,1
+
+
+
+@Autowired
+private EmployyService empService;
+
+//getbyId
+
+@GetMapping("/{id}")
+public ResponseEntity<Employee> getById(@PathVariable String id){
+
+	empservice.getById(id);	
+
+}
+
+
+Class Person{
+
+	@OneToOne
+	//@Joi
+	Address address;
+}
+
+Class Address{
+
+}
+
+
+
+
+Public class ResourceNotFoundException extends RuntimeException{
+
+	public ResourceNotFoundException(String message){
+		Super(message);
+	}
+	//default constructor
+}
+
+
+
+   throw new ResourceNotFoundException("resource not found exception occur!!");
+
+	employees.stream().sorted().collect(Collectors.toList());
+
+	names.stream().map(n -> n.toUpperCase()).collect(Collectors.toList());
+
+String input ="java";
+
+String rev = "";
+for(int i=input.length()-1;i>=0;i--){
+	rev=input.charAt(i) + rev;
+}
+
+Sop(rev)
+
+
+
+```
+
+
+
+
+
 
 - Explain ConcurrentHashMap class.
 
